removing overflow hidden. safari bug.

--- a/themes/uichr/scss/site/childpages.scss
+++ b/themes/uichr/scss/site/childpages.scss
@@ -31,7 +31,6 @@ Child Page Summary
 .withphoto .child-block-content {
 	@media (min-width: $break-medium) {
 		margin-left: 35%;
-		overflow: hidden;
 	}
 }
 .child-block .title {
